fixed white space under project button images

--- a/site.css
+++ b/site.css
@@ -245,12 +245,11 @@ h1 {
     box-shadow: 0 4px 4px rgba(0,0,0,0.5);
 }
 .project-buttons .img-btn {
+    display: flex;
     cursor: pointer;
     transition: 0.1s;
     border-radius: 20px;
     background-color: white;
-    float: none;
-    margin: auto;
     max-width: 323px;
 }
 .project-buttons .img-btn img {
